--- a/assets/scss/partials/title-description.scss
+++ b/assets/scss/partials/title-description.scss
@@ -24,10 +24,12 @@
         align-items: center;
         gap: 12px;
         margin-top: 8px;
+        flex-wrap: wrap;
 
         .post-categories {
             display: flex;
             gap: 6px;
+            flex-wrap: wrap;
             
             .post-category {
                 background-color: #d9d9d9;
